# proj_xpatch

./: .gitignore  README.md  index.md
___cplusplus/: index.md
___python/: index.md
___python/CUTS/: my_note.md  pyproject.toml
___python/CUTS/src/: main.py  main_supervised.py
___python/CUTS/src/data_utils/: prepare_dataset.py
___python/CUTS/src/datasets/: retina.py
___python/CUTS/src/test/: test_gpu.py
___python/CUTS/src/utils/: parse.py
___python/DoCR/: .gitignore  my_note.md  pyproject.toml  setup.py
___python/DoCR/configs/: mytest_base1.yaml  mytest_base2.yaml  mytest_base3.yaml
___python/DoCR/docr/datasets/utils/: convert_csv_to_list.py
___python/DoCR/docr/training/: run_training.py
___python/DoCR/docr/training/train_nets/: train_docr.py
